2009-09-09  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Define MAEMO_VERSION and MAEMO_VERSION_MAJOR
	even on non-hildon platforms to make conditional tests easier

	* main.c (main): Use HildonDateButton in Fremantle

2009-09-02  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Add toolbar using hildon_window_add_toolbar
	(toolbar_size_allocate): Add/remove date toolbar using
	hildon_window_add/remove_toolbar

	* gtkdatesel.c (gtk_date_sel_new): Only force month widget size on
	Maemo versions less than 5

2009-09-01  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: On Hildon, set up MAEMO_VERSION and MAEMO_VERSION_MAJOR

	* gtkdatesel.c (ARROW_SIZE): Do not force arrow size if we are using Maemo 5
	(make_field): Support platforms which do not set ARROW_SIZE

	* main.c (main): Drop day-of-week display on hildon (note: day-of-week is 
	still shown in title bar). This undoes the change made on 2008-12-02.

2009-08-31  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Port to libsoup2.4

	* calendar-update.c (calendar_push_internal, pushed): Port to libsoup2.4

2009-08-20  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Add --without-libsoundgen option

	* alarm-dialog.h: Conditionalise libsoundgen use

	* alarm-dialog.c (ack_event_clicked): Conditionalise libsoundgen use

	* main.c (alarm_fired): Conditionalise libsoundgen use.
	Include gpe/soundgen.h if libsoundgen in use.

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/gpe-calendar: globals.h 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2008-12-02  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Set application name using g_set_application_name so that
	correct window title appears on Hildon
	(set_title): On Hildon just use date as window title as window manager adds
	"GPE Calendar"
	(main): Add day of week to toolbar (Bug 256)
	(propagate_time): Update day of week on toolbar