@@ -1,3 +1,9 @@
+2009-09-13  Graham Cobb  <g+770@cobb.uk.net>
+
+	* configure.ac: set up MAEMO5 condition for automake
+
+	* pixmaps/Makefile.am (gpe-calendar.png): Conditionalise application icon size
+
 2009-09-09  Graham Cobb  <g+770@cobb.uk.net>
 
 	* configure.ac: Define MAEMO_VERSION and MAEMO_VERSION_MAJOR
